# internal/github/pull_request.go
@@ -1,0 +1,18 @@
+package github
+
+const (
+	PULL_REQUEST_STATE_ALL   = "all"
+	PULL_REQUEST_STATE_OPEN  = "open"
+	PULL_REQUEST_STATE_CLOSE = "close"
+)
+
+type PullRequest struct {
+	Id             int64  `json:"id"`
+	Url            string `json:"html_url"`
+	Title          string `json:"title"`
+	State          string `json:"state"`
+	Number         int    `json:"number"`
+	Assigness      []User `json:"assignees"`
+	Reviewers      []User `json:"requested_reviewers"`
+	ReviewComments int    `json:"review_comments"`
+}
