# swagger/openapi.yml
@@ -435,6 +435,33 @@ paths:
           description: Invalid request
         '500':
           description: Internal server error
+  /github/calendars/{calendarId}/review-requests:
+    post:
+      summary: Get review requests for a calendar
+      tags:
+        - github
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: calendarId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Review requests retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GithubReviewRequestListResponse'
+        '400':
+          description: Invalid request
+        '500':
+          description: Internal server error
 components:
   securitySchemes:
     bearerAuth:
@@ -830,3 +857,34 @@ components:
           type: string
         installationId:
           type: string
+    GithubReviewRequestListResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        url:
+          type: string
+          format: url
+        title:
+          type: string
+        number:
+          type: integer
+        assigness:
+          type: array
+          items:
+            $ref: '#/components/schemas/GithubReviewRequestListResponseUser'
+    GithubReviewRequestListResponseUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        url:
+          type: string
+          format: url
+        avatarUrl:
+          type: string
+          format: url
